--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ fastar==0.8.0
 filelock==3.21.0
 fonttools==4.61.1
 future==1.0.0
+greenlet==3.3.1
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -52,6 +53,8 @@ pillow==12.1.1
 platformdirs==4.6.0
 pre_commit==4.5.1
 prompt_toolkit==3.0.52
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.12.5
@@ -71,6 +74,7 @@ rignore==0.7.6
 sentry-sdk==2.52.0
 shellingham==1.5.4
 six==1.17.0
+SQLAlchemy==2.0.46
 stack-data==0.6.3
 starlette==0.52.1
 traitlets==5.14.3
